--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Celebrare</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../Celebrare/style.css">
     <link rel="stylesheet" href="https://unpkg.com/cropperjs/dist/cropper.min.css" />
 </head>
 <body>
@@ -67,7 +67,7 @@
 <br><br>
     </div>
 
-    <script src="../JS/script.js"></script>
+    <script src="../Celebrare/script.js"></script>
     <script src="https://unpkg.com/cropperjs/dist/cropper.min.js"></script>
 
 </body>
