--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Celebrare</title>
+    <title>Image Manipulation</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unpkg.com/cropperjs/dist/cropper.min.css" />
 </head>
@@ -11,7 +11,7 @@
     <div class="container">
         <header class="head">
             <nav>
-                <h1>Celebrare</h1>
+                <h1>Mcube Infotech</h1>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Team</a></li>
